@@ -1,4 +1,9 @@
 2007-12-16  Douglas S. Blank  <dblank@cs.brynmawr.edu>
+	* src/ReportBase/_PaperMenu.py: get margins in PaperFrame constructor
+	* src/ReportBase/_DocReportDialog.py: pass margins to PaperFrame constructor
+	* src/ReportBase/_ReportOptions.py: added getters/setters for margins
+
+2007-12-16  Douglas S. Blank  <dblank@cs.brynmawr.edu>
 	* src/plugins/Calendar.py: fixed MenuOption's EnumeratedList to match 
 	Brian's changes on 2007-12-15.
 
